--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
         <tr><th>Product</th><td>Flower Vase</td></tr>
         <tr><th>Product Code</th><td>GBSL250101</td></tr>
         <tr><th>Product Material</th><td>Iron</td></tr>
-        <tr><th>Product Size</th><td>1st: 16x16x15 cm<br>2nd: 19x19x18 cm</td></tr>
+        <tr><th>Product Size</th><td>1st:Length 16cm x Width 16cm x Height 15cm<br>2nd:Length 19cm x Width 19cm x Height 18cm</td></tr>
         <tr><th>Product CBM</th><td>1st: 0.0038<br>2nd: 0.0065</td></tr>
         <tr><th>Product Weight</th><td>Nill</td></tr>
         <tr><th>Unit</th><td>Set</td></tr>
-        <tr><th>Carton Size</th><td>39x19x28 cm</td></tr>
+        <tr><th>Carton Size</th><td>Length 39cm x Width 19cm x Height28cm</td></tr>
         <tr><th>Carton Quantity</th><td>4</td></tr>
         <tr><th>Carton CBM</th><td>0.020</td></tr>
         <tr><th>20 Ft Container Carton Quantity</th><td>5398</td></tr>
