--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       width: 100%;
       max-width: 350px;
       height: auto;
-      margin-top: 20px;
+      margin-top: 50px;
     }
     table {
       width: 100%;
@@ -104,7 +104,7 @@
         <tr><th>Product Material</th><td>Iron</td></tr>
         <tr><th>Product Size</th><td>1st:Length 16cm x Width 16cm x Height 15cm<br>2nd:Length 19cm x Width 19cm x Height 18cm</td></tr>
         <tr><th>Product CBM</th><td>1st: 0.0038<br>2nd: 0.0065</td></tr>
-        <tr><th>Product Weight</th><td>Nill</td></tr>
+        <tr><th>Product Weight</th><td></td></tr>
         <tr><th>Unit</th><td>Set</td></tr>
         <tr><th>Carton Size</th><td>Length 39cm x Width 19cm x Height28cm</td></tr>
         <tr><th>Carton Quantity</th><td>4</td></tr>
@@ -112,7 +112,7 @@
         <tr><th>20 Ft Container Carton Quantity</th><td>5398</td></tr>
         <tr><th>40 Ft Container Carton Quantity</th><td>11375</td></tr>
         <tr><th>40 HQ Container Carton Quantity</th><td>13110</td></tr>
-        <tr><th>Price</th><td>Nill</td></tr>
+        <tr><th>Price</th><td>USD 3.24 </td></tr>
         <tr><th>FOB Port</th><td>Mundra</td></tr>
         <tr>
           <th>More Details - Packaging PPT</th>
