--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <tr><th>40 Ft Container Carton Quantity</th><td>11375</td></tr>
         <tr><th>40 HQ Container Carton Quantity</th><td>13110</td></tr>
         <tr><th>Price</th><td>USD 3.24 </td></tr>
-        <tr><th>FOB Port</th><td>Mundra</td></tr>
+        <tr><th>FOB Port</th><td>Mundra, India</td></tr>
         <tr>
           <th>More Details - Packaging PPT</th>
           <td>Brown Box</td>
